--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Code runner</title>
+        <link rel="stylesheet" href="css/style.css" />
+        <meta name="description" content="" />
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.12/src/ace.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.12/src/ext-language_tools.js"></script>
+    </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Code runner</title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
-  <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.12/src/ace.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.12/src/ext-language_tools.js"></script>
-</head>
-
-<body>
-  <div id="editor"></div>
-  <button>Run</button>
-  <script src="js/app.js"></script>
-</body>
+    <body>
+        <div id="editor"></div>
+        <button>Run</button>
+        <script src="js/app.js"></script>
+    </body>
 </html>
