--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
     <body>
         <div id="editor"></div>
-        <button>Run</button>
+        <div class="lang">
+            <select name="lang" id="lang">
+                <option value="javascript">Javascript</option>
+                <option value="html">HTML</option>
+                <option value="css">Css</option>
+                <option value="python">Python</option>
+                <option value="golang">Golang</option>
+                <option value="php">Php</option>
+                <option value="java">Java</option>
+            </select>
+        </div>
+        <div class="output">
+            <h2>Output:</h2>
+            <div class="outputtext"></div>
+        </div>
+        <button id="button">Run</button>
         <script src="js/app.js"></script>
     </body>
 </html>
